--- a/public/posts/about.mdx
+++ b/public/posts/about.mdx
@@ -1,6 +1,6 @@
 # About
 
-I’m a long time [Software Engineer](https://www.linkedin.com/in/gary-archer-6b3613153/) with an interest in the art of separation. The deeper problems in software usually the result of suboptimal designs. OAuth done right is a great example of solid design choices that provide high business value.
+I'm a long time [Software Engineer](https://www.linkedin.com/in/gary-archer-6b3613153/) with an interest in the art of separation. The deeper problems in software usually the result of suboptimal designs. OAuth done right is a great example of solid design choices that provide high business value.
 
 ### Blog History
 
