--- a/public/posts/android-code-sample-overview.mdx
+++ b/public/posts/android-code-sample-overview.mdx
@@ -10,7 +10,7 @@ The following table summarises the main features of the code sample, some of whi
 | ------- | ----------- |
 | AppAuth Integration | We will implement the essential OpenID Connect behaviour by integrating the standard libraries |
 | Claimed HTTPS Schemes | The login result is returned to the app over HTTPS URLs, which is the most secure option according to security guidance |
-| Secure Token Storage | Tokens are stored on the device after login, and not accessible by other apps, so that users don’t need to authenticate on every app restart |
+| Secure Token Storage | Tokens are stored on the device after login, and not accessible by other apps, so that users don't need to authenticate on every app restart |
 | Deep Linking | Our app also supports HTTPS App Links, so that users can bookmark locations within the app |
 
 ### Code Download
