--- a/public/posts/basicandroidapp-execution.mdx
+++ b/public/posts/basicandroidapp-execution.mdx
@@ -1,9 +1,9 @@
 # How to Run the Android Code Sample
 
-Previously we provided an <a href='android-code-sample-overview'>Android Code Sample Overview</a> and next we will describe how to run and test the code sample. Readers who are new to Android development may also want to browse these earlier pages:
+Previously we provided an <a href='android-code-sample-overview.mdx'>Android Code Sample Overview</a> and next we will describe how to run and test the code sample. Readers who are new to Android development may also want to browse these earlier pages:
 
-- <a href='android-setup'>Android Setup and the AppAuth Sample</a>
-- <a href='android-https-debugging'>Android HTTPS Debugging</a>
+- <a href='android-setup.mdx'>Android Setup and the AppAuth Sample</a>
+- <a href='android-https-debugging.mdx'>Android HTTPS Debugging</a>
 
 ### Prerequisite: Install Android Studio
 
@@ -328,5 +328,5 @@ We have shown how to run this blog’s Android code sample,  and test its techni
 
 ### Next
 
-- Next we will describe some required <a href='android-infrastructure-setup'>Android Mobile Infrastructure</a>
-- For a list of all blog posts see the <a href='index'>Index Page</a>
+- Next we will describe some required <a href='android-infrastructure-setup.mdx'>Android Mobile Infrastructure</a>
+- For a list of all blog posts see the <a href='index.mdx'>Index Page</a>
