--- a/public/posts/basicspa-execution.mdx
+++ b/public/posts/basicspa-execution.mdx
@@ -1,6 +1,6 @@
 # Basic SPA – How to Run the Sample
 
-Previously I summarised the behaviour of the initial <a href='basicspa-overview'>SPA and API Code Sample</a>. Next I show how to run it on a development computer, then visually describe the important OAuth related behaviour.
+Previously I summarised the behaviour of the initial <a href='basicspa-overview.mdx'>SPA and API Code Sample</a>. Next I show how to run it on a development computer, then visually describe the important OAuth related behaviour.
 
 ### Prerequisites
 
@@ -69,8 +69,8 @@ The API acts as an *OAuth Resource Server* and uses these configuration values.
 
 Both the SPA and API use endpoints from my personal AWS Cognito account, which is a low cost cloud solution. Jump ahead to these future posts for further details:
 
-- <a href='oauth-infrastructure-setup'>OAuth Infrastructure Setup</a>
-- <a href='managed-authorization-server-setup'>AWS Cognito Cloud Setup</a>
+- <a href='oauth-infrastructure-setup.mdx'>OAuth Infrastructure Setup</a>
+- <a href='managed-authorization-server-setup.mdx'>AWS Cognito Cloud Setup</a>
 
 You must register OAuth clients at the authorization server, and the SPA includes the following entry:
 
@@ -199,5 +199,5 @@ The initial code sample integrates an SPA, API and authorization server. This po
 
 ### Next
 
-- Next I explain some <a href='basicspa-oauthworkflow'>SPA and API OAuth Messages</a>.
-- For a list of all blog posts see the <a href='index'>Index Page</a>.
+- Next I explain some <a href='basicspa-oauthworkflow.mdx'>SPA and API OAuth Messages</a>.
+- For a list of all blog posts see the <a href='index.mdx'>Index Page</a>.
