--- a/public/posts/basicspa-overview.mdx
+++ b/public/posts/basicspa-overview.mdx
@@ -1,6 +1,6 @@
 # Basic SPA – Overview
 
-In the <a href='web-architecture-goals'>Web Architecture Goals</a> post I summarised some desired qualities. The first step is to run an integrated code sample on a development computer, so that access tokens are sent between an SPA, API and authorization server.
+In the <a href='web-architecture-goals.mdx'>Web Architecture Goals</a> post I summarised some desired qualities. The first step is to run an integrated code sample on a development computer, so that access tokens are sent between an SPA, API and authorization server.
 
 ### Behaviours
 
@@ -22,7 +22,7 @@ The Basic SPA Code Sample will get the below components and endpoints talking to
 
 ### SPAs in 2021
 
-This sample uses the traditional SPA solution, with a JavaScript OpenID Connect implementation. It is now considered more secure for your production apps to instead use a <a href='spa-back-end-for-front-end'>Backend for Frontend</a> approach.
+This sample uses the traditional SPA solution, with a JavaScript OpenID Connect implementation. It is now considered more secure for your production apps to instead use a <a href='spa-back-end-for-front-end.mdx'>Backend for Frontend</a> approach.
 
 The traditional SPA flow remains useful when you first learn OAuth, and to represent a pure SPA architecture.
 
@@ -80,5 +80,5 @@ I explained the initial code sample's behaviour, to integrate an SPA, the API an
 
 ### Next
 
-- Next I explain <a href='basicspa-execution'>How to Run the Code Sample</a>.
-- For a list of all blog posts see the <a href='index'>Index Page</a>.
+- Next I explain <a href='basicspa-execution.mdx'>How to Run the Code Sample</a>.
+- For a list of all blog posts see the <a href='index.mdx'>Index Page</a>.
