--- a/public/posts/cloud--native-updates.mdx
+++ b/public/posts/cloud--native-updates.mdx
@@ -1,6 +1,6 @@
 # Cloud Native Updates
 
-Previously we described this blog’s <a href='serverless-api-coding-model'>Serverless API Code Details</a>. This completes a cloud version 1 architecture, where the SPA is deployed to a *Content Delivery Network*, and the API side of the architecture runs without needing to manage any infrastructure.
+Previously we described this blog’s <a href='serverless-api-coding-model.mdx'>Serverless API Code Details</a>. This completes a cloud version 1 architecture, where the SPA is deployed to a *Content Delivery Network*, and the API side of the architecture runs without needing to manage any infrastructure.
 
 ### Cloud Native
 
@@ -12,4 +12,4 @@ In future I will run this blog’s code samples using cloud native supporting co
 
 ### Next
 
-For a list of all blog posts see the <a href='index'>Index Page</a>
+For a list of all blog posts see the <a href='index.mdx'>Index Page</a>
