--- a/public/posts/cloud-domain-setup.mdx
+++ b/public/posts/cloud-domain-setup.mdx
@@ -1,6 +1,6 @@
 # Cloud Domain Setup
 
-Previously we described a <a href='cloud-hosting'>Cloud Hosting Overview</a>, to summarise the overall behaviour of the cloud deployment. Next I will explain the steps I took to enable an initial *AWS Cloud Setup for Development*, including purchasing an internet domain.
+Previously we described a <a href='cloud-hosting.mdx'>Cloud Hosting Overview</a>, to summarise the overall behaviour of the cloud deployment. Next I will explain the steps I took to enable an initial *AWS Cloud Setup for Development*, including purchasing an internet domain.
 
 ### Create an AWS Developer Account
 
@@ -130,7 +130,7 @@ Subdomains were created to enable *Real World Internet URLs* for our demo apps, 
 
 ### Next
 
-- Next we complete the <a href='managed-authorization-server-setup'>Cloud Authorization Server Setup</a>
-- For a list of all blog posts see the <a href='index'>Index Page</a>
+- Next we complete the <a href='managed-authorization-server-setup.mdx'>Cloud Authorization Server Setup</a>
+- For a list of all blog posts see the <a href='index.mdx'>Index Page</a>
 
 
