--- a/public/posts/desktop-app-coding-key-points.mdx
+++ b/public/posts/desktop-app-coding-key-points.mdx
@@ -1,6 +1,6 @@
 # Desktop App – Code Details
 
-Previously I summarised some test behavior in <a href='desktop-app-how-to-run-the-code-sample'>How to Run the Desktop Code Sample</a>. I complete the content for the initial desktop app with some code-level details.
+Previously I summarised some test behavior in <a href='desktop-app-how-to-run-the-code-sample.mdx'>How to Run the Desktop Code Sample</a>. I complete the content for the initial desktop app with some code-level details.
 
 ### Code Layout
 
@@ -235,7 +235,7 @@ The following main classes are used to handle OAuth and API logic. The strategy 
 
 ### Debugging HTTP Requests
 
-One consequence of this design is that you cannot easily view HTTP requests that the renderer process initiates. To view the requests you can use an <a href='http-debugging-setup'>HTTP proxy tool</a>. The easiest option is to run the tool and change your network settings, then edit the *desktop.config.json* file to activate the proxy, then run the desktop app with the following commands:
+One consequence of this design is that you cannot easily view HTTP requests that the renderer process initiates. To view the requests you can use an <a href='http-debugging-setup.mdx'>HTTP proxy tool</a>. The easiest option is to run the tool and change your network settings, then edit the *desktop.config.json* file to activate the proxy, then run the desktop app with the following commands:
 
 ```bash
 export NODE_TLS_REJECT_UNAUTHORIZED=0
@@ -591,5 +591,5 @@ I explained some Electron mechanics and the integration of the AppAuth-JS librar
 
 ### Next
 
-- I provide a <a href='final-desktop-sample-overview'>Final Desktop Code Sample</a> with some additional behaviors.
-- For a list of all blog posts see the <a href='index'>Index Page</a>.
+- I provide a <a href='final-desktop-sample-overview.mdx'>Final Desktop Code Sample</a> with some additional behaviors.
+- For a list of all blog posts see the <a href='index.mdx'>Index Page</a>.
