--- a/public/posts/desktop-app-how-to-run-the-code-sample.mdx
+++ b/public/posts/desktop-app-how-to-run-the-code-sample.mdx
@@ -1,6 +1,6 @@
 # Desktop App – How to Run the Code Sample
 
-Previously I provided a brief <a href='desktop-apps-overview'>Desktop Code Sample Overview</a>. Next I explain how to run a more detailed desktop code sample on your local computer, which manages OAuth behaviors in a more complete way.
+Previously I provided a brief <a href='desktop-apps-overview.mdx'>Desktop Code Sample Overview</a>. Next I explain how to run a more detailed desktop code sample on your local computer, which manages OAuth behaviors in a more complete way.
 
 ### Prerequisite: Install Node.js
 
@@ -18,7 +18,7 @@ git clone https://github.com/gary-archer/oauth.desktopsample1
 
 ### Step 2: View the Code in an IDE
 
-The desktop app re-uses some code from this blog’s <a href='improved-spa-code-sample-overview'>second SPA</a> and has exactly the same views:
+The desktop app re-uses some code from this blog’s <a href='improved-spa-code-sample-overview.mdx'>second SPA</a> and has exactly the same views:
 
 ```typescript
 export class CompaniesView {
@@ -72,7 +72,7 @@ If you did an earlier SPA login in the same browser and used the save password f
 
 ![browser logged in](../images/420/browser-loggedin.jpg?v=20240922)
 
-When login completes, the app gets OAuth tokens, stores them in memory and returns itself to the foreground. It then gets data from a <a href='serverless-api-overview'>cloud hosted OAuth-secured API</a> and renders results.
+When login completes, the app gets OAuth tokens, stores them in memory and returns itself to the foreground. It then gets data from a <a href='serverless-api-overview.mdx'>cloud hosted OAuth-secured API</a> and renders results.
 
 ### Step 4: View OAuth Configuration
 
@@ -169,6 +169,6 @@ I used this blog's second SPA for the views of an OAuth-secured desktop app, whi
 
 ### Next
 
-- I explain some <a href='desktop-app-coding-key-points'>Desktop App Code Details</a>.
-- For a list of all blog posts see the <a href='index'>Index Page</a>.
+- I explain some <a href='desktop-app-coding-key-points.mdx'>Desktop App Code Details</a>.
+- For a list of all blog posts see the <a href='index.mdx'>Index Page</a>.
 
