--- a/public/posts/developer-ssl-setup.mdx
+++ b/public/posts/developer-ssl-setup.mdx
@@ -1,6 +1,6 @@
 # SSL Trust Configuration
 
-Previously I explained how to use an <a href='http-debugging-setup'>HTTP Proxy</a> to trace OAuth-related requests. Next, I explain how to enable HTTPS connections for development. Future code samples use SSL for all backend connections. I use *SSL* as the colloquial term, to represent [transport level security (TLS) v1.3](https://en.wikipedia.org/wiki/Transport_Layer_Security#TLS_1.3).
+Previously I explained how to use an <a href='http-debugging-setup.mdx'>HTTP Proxy</a> to trace OAuth-related requests. Next, I explain how to enable HTTPS connections for development. Future code samples use SSL for all backend connections. I use *SSL* as the colloquial term, to represent [transport level security (TLS) v1.3](https://en.wikipedia.org/wiki/Transport_Layer_Security#TLS_1.3).
 
 ### Productive OAuth Development
 
@@ -243,11 +243,11 @@ export NODE_EXTRA_CA_CERTS=~/trusted-ca-certs.crt
 
 ### Trusting a Root Certificate in .NET APIs
 
-This blog's <a href='net-core-code-sample-overview/'>OAuth Secured .NET API</a> uses certificate trust inherited from the operating system SSL trust store.
+This blog's <a href='net-core-code-sample-overview.mdx'>OAuth Secured .NET API</a> uses certificate trust inherited from the operating system SSL trust store.
 
 ### Trusting a Root Certificate in Java APIs
 
-This blog's <a href='java-spring-boot-api-overview'>OAuth Secured Java API</a> uses certificate trust from the Java trust store. For example, on Ubuntu Linux this is at the following location when running Java 21:
+This blog's <a href='java-spring-boot-api-overview.mdx'>OAuth Secured Java API</a> uses certificate trust from the Java trust store. For example, on Ubuntu Linux this is at the following location when running Java 21:
 
 ```markdown
 /usr/lib/jvm/zulu-21-amd64/lib/security/cacerts
@@ -263,7 +263,7 @@ sudo "$JAVA_HOME/bin/keytool" -delete -alias mitmroot -cacerts -storepass change
 
 ### Trusting a Root Certificate in Electron Apps
 
-For this blog's <a href='desktop-apps-overview'>OAuth Secured Desktop Apps</a> there are two processes, which determine certificate trust with different rules:
+For this blog's <a href='desktop-apps-overview.mdx'>OAuth Secured Desktop Apps</a> there are two processes, which determine certificate trust with different rules:
 
 | Area | Trust Behaviour |
 | ---- | --------------- |
@@ -290,8 +290,8 @@ openssl s_client -CAfile ~/trusted-ca-certs.crt -connect api.authsamples-dev.com
 
 Mobile SSL trust has its own complexities, which are covered in the later posts on mobile setup:
 
-- <a href='android-https-debugging'>Android HTTPS Debugging</a>
-- <a href='ios-https-debugging'>iOS HTTPS Debugging</a>
+- <a href='android-https-debugging.mdx'>Android HTTPS Debugging</a>
+- <a href='ios-https-debugging.mdx'>iOS HTTPS Debugging</a>
 
 ### Where Are We?
 
@@ -299,5 +299,5 @@ I explained how to upgrade the development setup so that you can use real-world 
 
 ### Next
 
-- I provide some design articles, starting with <a href='user-data'>User Data Management</a>.
-- For a list of all blog posts see the <a href='index'>Index Page</a>.
+- I provide some design articles, starting with <a href='user-data.mdx'>User Data Management</a>.
+- For a list of all blog posts see the <a href='index.mdx'>Index Page</a>.
